--- a/src/styles/pages/_overview.scss
+++ b/src/styles/pages/_overview.scss
@@ -1,4 +1,8 @@
 .overview {
+  &-text {
+    width: 30vw;
+  }
+
   .text-title {
     padding-top: 0.8em;
   }
@@ -19,11 +23,12 @@
   }
 
   &-data-column:nth-of-type(1) {
-    width: 40%;
+    width: 45%;
+    padding-right: 1em;
   }
 
   &-data-column:nth-of-type(2) {
-    width: 60%;
+    width: 55%;
   }
 }
 
